--- a/style.css
+++ b/style.css
@@ -1,74 +1,26 @@
-/* div{
-    border-left: 6pt groove red;
-    border-bottom: 5px double rgb(0,128,128);
-} */
-img {
-    vertical-align: middle;
+#gran1,#gran2{
+    width: 150px;
+    height: 20px;
+    border: 1px solid black;
 }
-#item1{
-    padding: 40px;
-    margin: 100px;
-    box-sizing: content-box;
+#gran1{
+    background-color: #D61355;
 }
-#item2{
-    padding: 40px;
-    margin: 100px;
-    box-sizing: border-box;
+#gran2{
+    background-color: #30E3DF;
 }
-
-
-/* ------- */
-#navigation{
-    /* height: 100px; */
-    background-color: aqua;
-    /* grid-area: n; */
-}
-#sidebar{
-    width: 300px;
-    background-color: aquamarine;
-    /* grid-area: s; */
-}
-#content{
-    /* height: 300px; */
-    background-color: rgb(39, 179, 133);
-    /* grid-area: c; */
-}
-#footer{
-    /* height: 100%; */
-    background-color: rgb(220, 181, 238);
-    /* grid-area: f; */
+#child1,#child2{
+    width: 200px;
+    height: 50px;
+    background-color: #FCE22A;
+    border: 1px solid black;
 }
 #container{
-
-    display: flex;
-    /* display: grid; */
-    /* grid-template-areas:
-    'n  n   n   n'
-    'c  c   c   s'
-    'c  c   c   s'
-    'f  f   f   f'
-    'f  f   f   f' */
+    width: 500px;
+    height: 200px;
+    background-color: #F3CCFF;
+    border: 1px solid black;
 }
-@media screen and (max-width: 600px){
-    #container{
-        display: flex;
-        flex-direction: column;
-    }
-    #sidebar{
-        justify-content: flex-end;
-    }
-}
-
-.esp{
-    /* height: 100px; */
-    font-size: 20px;
+.red-text{
     color: red;
-}
-#nameDiv{
-    position: relative;
-    top: 100px;
-    background-color:rgb(220, 181, 238);
-}
-body{
-    margin: 0px;
 }
